// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component test Button component should perform correctly on initial run 1`] = `
<button
  className="button "
  onClick={[Function]}
  type="button"
/>
`;

exports[`component test Buttons component should perform correctly on initial run 1`] = `
<div
  className="buttons"
>
  <button
    className="button "
    onClick={[Function]}
    type="button"
  >
    AC
  </button>
  <button
    className="button "
    onClick={[Function]}
    type="button"
  >
    +/-
  </button>
  <button
    className="button "
    onClick={[Function]}
    type="button"
  >
    %
  </button>
  <button
    className="button "
    onClick={[Function]}
    type="button"
  >
    7
  </button>
  <button
    className="button "
    onClick={[Function]}
    type="button"
  >
    8
  </button>
  <button
    className="button "
    onClick={[Function]}
    type="button"
  >
    9
  </button>
  <button
    className="button "
    onClick={[Function]}
    type="button"
  >
    4
  </button>
  <button
    className="button "
    onClick={[Function]}
    type="button"
  >
    5
  </button>
  <button
    className="button "
    onClick={[Function]}
    type="button"
  >
    6
  </button>
  <button
    className="button "
    onClick={[Function]}
    type="button"
  >
    1
  </button>
  <button
    className="button "
    onClick={[Function]}
    type="button"
  >
    2
  </button>
  <button
    className="button "
    onClick={[Function]}
    type="button"
  >
    3
  </button>
  <button
    className="button btn"
    onClick={[Function]}
    type="button"
  >
    0
  </button>
  <button
    className="button "
    onClick={[Function]}
    type="button"
  >
    .
  </button>
</div>
`;

exports[`component test Calculator component should perform the calculations correctly on initial run 1`] = `
<div
  className="calculator"
>
  <div
    className="screen"
  >
    <p>
      0
    </p>
    <p
      className="operation"
    />
  </div>
  <div
    className="bottom"
  >
    <div
      className="last"
    >
      <button
        className="button "
        onClick={[Function]}
        type="button"
      >
        ÷
      </button>
      <button
        className="button "
        onClick={[Function]}
        type="button"
      >
        x
      </button>
      <button
        className="button "
        onClick={[Function]}
        type="button"
      >
        -
      </button>
      <button
        className="button "
        onClick={[Function]}
        type="button"
      >
        +
      </button>
      <button
        className="button "
        onClick={[Function]}
        type="button"
      >
        =
      </button>
    </div>
    <div
      className="buttons"
    >
      <button
        className="button "
        onClick={[Function]}
        type="button"
      >
        AC
      </button>
      <button
        className="button "
        onClick={[Function]}
        type="button"
      >
        +/-
      </button>
      <button
        className="button "
        onClick={[Function]}
        type="button"
      >
        %
      </button>
      <button
        className="button "
        onClick={[Function]}
        type="button"
      >
        7
      </button>
      <button
        className="button "
        onClick={[Function]}
        type="button"
      >
        8
      </button>
      <button
        className="button "
        onClick={[Function]}
        type="button"
      >
        9
      </button>
      <button
        className="button "
        onClick={[Function]}
        type="button"
      >
        4
      </button>
      <button
        className="button "
        onClick={[Function]}
        type="button"
      >
        5
      </button>
      <button
        className="button "
        onClick={[Function]}
        type="button"
      >
        6
      </button>
      <button
        className="button "
        onClick={[Function]}
        type="button"
      >
        1
      </button>
      <button
        className="button "
        onClick={[Function]}
        type="button"
      >
        2
      </button>
      <button
        className="button "
        onClick={[Function]}
        type="button"
      >
        3
      </button>
      <button
        className="button btn"
        onClick={[Function]}
        type="button"
      >
        0
      </button>
      <button
        className="button "
        onClick={[Function]}
        type="button"
      >
        .
      </button>
    </div>
  </div>
</div>
`;

exports[`component test CalculatorPage component should perform correctly on initial run 1`] = `
<main
  style={
    Object {
      "display": "flex",
      "margin": "8rem 10%",
    }
  }
>
  <p>
    Let's do some maths
  </p>
  <div
    className="calculator"
  >
    <div
      className="screen"
    >
      <p>
        0
      </p>
      <p
        className="operation"
      />
    </div>
    <div
      className="bottom"
    >
      <div
        className="last"
      >
        <button
          className="button "
          onClick={[Function]}
          type="button"
        >
          ÷
        </button>
        <button
          className="button "
          onClick={[Function]}
          type="button"
        >
          x
        </button>
        <button
          className="button "
          onClick={[Function]}
          type="button"
        >
          -
        </button>
        <button
          className="button "
          onClick={[Function]}
          type="button"
        >
          +
        </button>
        <button
          className="button "
          onClick={[Function]}
          type="button"
        >
          =
        </button>
      </div>
      <div
        className="buttons"
      >
        <button
          className="button "
          onClick={[Function]}
          type="button"
        >
          AC
        </button>
        <button
          className="button "
          onClick={[Function]}
          type="button"
        >
          +/-
        </button>
        <button
          className="button "
          onClick={[Function]}
          type="button"
        >
          %
        </button>
        <button
          className="button "
          onClick={[Function]}
          type="button"
        >
          7
        </button>
        <button
          className="button "
          onClick={[Function]}
          type="button"
        >
          8
        </button>
        <button
          className="button "
          onClick={[Function]}
          type="button"
        >
          9
        </button>
        <button
          className="button "
          onClick={[Function]}
          type="button"
        >
          4
        </button>
        <button
          className="button "
          onClick={[Function]}
          type="button"
        >
          5
        </button>
        <button
          className="button "
          onClick={[Function]}
          type="button"
        >
          6
        </button>
        <button
          className="button "
          onClick={[Function]}
          type="button"
        >
          1
        </button>
        <button
          className="button "
          onClick={[Function]}
          type="button"
        >
          2
        </button>
        <button
          className="button "
          onClick={[Function]}
          type="button"
        >
          3
        </button>
        <button
          className="button btn"
          onClick={[Function]}
          type="button"
        >
          0
        </button>
        <button
          className="button "
          onClick={[Function]}
          type="button"
        >
          .
        </button>
      </div>
    </div>
  </div>
</main>
`;

exports[`component test Header component should perform correctly on initial run 1`] = `
<header
  className="header"
>
  <h1>
    Math Magicians
  </h1>
  <nav>
    <ul
      className="nav"
    >
      <li>
        <a
          aria-current="page"
          className="active"
          href="/"
          onClick={[Function]}
        >
          Home
        </a>
      </li>
      <li>
        <a
          className=""
          href="/calculator"
          onClick={[Function]}
        >
          Calculator
        </a>
      </li>
      <li>
        <a
          className=""
          href="/quote"
          onClick={[Function]}
        >
          Quote
        </a>
      </li>
    </ul>
  </nav>
</header>
`;

exports[`component test Home component should perform correctly on initial run 1`] = `
<main>
  <h2
    style={
      Object {
        "margin": "50px 10%",
      }
    }
  >
    Welcome to our page!
  </h2>
  <p
    style={
      Object {
        "margin": "25px 10%",
      }
    }
  >
    Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum pariatur molestias officia, ducimus vitae voluptas asperiores porro provident, iure et deserunt alias iste voluptatum dolorem maxime temporibus inventore. Quidem, odit.
  </p>
  <p
    style={
      Object {
        "margin": "25px 10%",
      }
    }
  >
    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus accusantium enim aliquid officia vero a cumque repellendus doloremque mollitia exercitationem repudiandae suscipit, vitae, voluptatum eveniet tempora architecto alias quis aperiam?
  </p>
</main>
`;

exports[`component test Last component should perform correctly on initial run 1`] = `
<div
  className="last"
>
  <button
    className="button "
    onClick={[Function]}
    type="button"
  >
    ÷
  </button>
  <button
    className="button "
    onClick={[Function]}
    type="button"
  >
    x
  </button>
  <button
    className="button "
    onClick={[Function]}
    type="button"
  >
    -
  </button>
  <button
    className="button "
    onClick={[Function]}
    type="button"
  >
    +
  </button>
  <button
    className="button "
    onClick={[Function]}
    type="button"
  >
    =
  </button>
</div>
`;

exports[`component test NavBar component should perform correctly on initial run 1`] = `
<nav>
  <ul
    className="nav"
  >
    <li>
      <a
        aria-current="page"
        className="active"
        href="/"
        onClick={[Function]}
      >
        Home
      </a>
    </li>
    <li>
      <a
        className=""
        href="/calculator"
        onClick={[Function]}
      >
        Calculator
      </a>
    </li>
    <li>
      <a
        className=""
        href="/quote"
        onClick={[Function]}
      >
        Quote
      </a>
    </li>
  </ul>
</nav>
`;

exports[`component test Quote component should perform correctly on initial run 1`] = `
<main
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "90vh",
      "justifyContent": "center",
      "margin": "0 10%",
      "width": "90vw",
    }
  }
>
  <p>
    Mathematics is not about numbers, equations, computations, or algorithms: it is about understanding. - William Paul Thurston
  </p>
</main>
`;

exports[`component test Screen component should perform correctly on initial run 1`] = `
<div
  className="screen"
>
  <p />
  <p
    className="operation"
  />
</div>
`;
